<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_equation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/input_equation"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_equation"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/text_answerNumerator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_text"
            />
        <View
            android:id="@+id/lineBreaker"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/textColorSecondary"
            />
        <TextView
            android:id="@+id/text_answerDenominator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_text"
            />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.57"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_keypad">

        <Button
            android:id="@+id/button_num7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/_7"
            app:cornerRadius="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2"
            />

        <Button
            android:id="@+id/button_num8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/_8"
            app:cornerRadius="0dp"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/button_num7"
            app:layout_constraintTop_toTopOf="@id/button_num7"
            app:layout_constraintWidth_percent="0.2"
            />

        <Button
            android:id="@+id/button_num9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/_9"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_num8"
            app:layout_constraintTop_toTopOf="@id/button_num8"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_num4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/_4"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toStartOf="@id/button_num7"
            app:layout_constraintTop_toBottomOf="@id/button_num7"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2"/>

        <Button
            android:id="@+id/button_num5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/_5"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_num4"
            app:layout_constraintTop_toTopOf="@id/button_num4"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_num6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/_6"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_num5"
            app:layout_constraintTop_toTopOf="@id/button_num5"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_num1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/_1"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toStartOf="@id/button_num4"
            app:layout_constraintTop_toBottomOf="@id/button_num4"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_num2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/_2"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_num1"
            app:layout_constraintTop_toTopOf="@id/button_num1"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_num3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/_3"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_num2"
            app:layout_constraintTop_toTopOf="@id/button_num2"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_sign"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/sign"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toStartOf="@id/button_num1"
            app:layout_constraintTop_toBottomOf="@id/button_num1"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_num0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/_0"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_sign"
            app:layout_constraintTop_toTopOf="@id/button_sign"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/point"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_num0"
            app:layout_constraintTop_toTopOf="@id/button_num0"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/plus"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_num9"
            app:layout_constraintTop_toTopOf="@id/button_num9"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/minus"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_num6"
            app:layout_constraintTop_toTopOf="@id/button_num6"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            app:cornerRadius="0dp"
            android:text="@string/multiply"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/button_num3"
            app:layout_constraintTop_toTopOf="@id/button_num3"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/division"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_point"
            app:layout_constraintTop_toTopOf="@id/button_point"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_allclear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/allclear"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_plus"
            app:layout_constraintTop_toTopOf="@id/button_plus"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/clear"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_minus"
            app:layout_constraintTop_toTopOf="@id/button_minus"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_answer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/answer"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_multiply"
            app:layout_constraintTop_toTopOf="@id/button_multiply"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/equal"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_division"
            app:layout_constraintTop_toTopOf="@id/button_division"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_opening_paren"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/paren_opening"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="@id/button_sign"
            app:layout_constraintTop_toBottomOf="@id/button_sign"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_closing_paren"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/paren_closing"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_opening_paren"
            app:layout_constraintTop_toTopOf="@id/button_opening_paren"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_PI"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/pi"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_closing_paren"
            app:layout_constraintTop_toTopOf="@id/button_closing_paren"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_E"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/euler"
            app:cornerRadius="0dp"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/button_PI"
            app:layout_constraintTop_toTopOf="@id/button_PI"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />

        <Button
            android:id="@+id/button_formatter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/formatter"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@id/button_E"
            app:layout_constraintTop_toTopOf="@id/button_E"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_percent="0.2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>